package/objects/SFDX_CICD__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDXAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>sdxs</relationshipLabel>
        <relationshipName>sdxs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfdxcontact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>sdxs</relationshipLabel>
        <relationshipName>sdxs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SFDX CICD</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SFDX CICD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sdxs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>